Implement batch job server (#232)
